--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -6,15 +6,15 @@ body {
 
 .menu {
   position: fixed;
+  top: 0;
+  right: 0;
   z-index: 5;
   width: 100vw;
-  top: 0;
-  
-  justify-content: right;
- 
+  display: flex;
+  justify-content: flex-end;
   background-color: black;
-  border-bottom: 10px;
-  border-color: white;
+  border-bottom: 2px solid white; /* white line under the header */
+  padding: 1rem 2rem;
 }
 
 .menu ul {
